--- a/Semana 5/task-list/src/index.css
+++ b/Semana 5/task-list/src/index.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto'  sans-serif;
+}
+
+.app {
+  height: 100vh;
+  max-width: 800px;
 }
